<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addBookActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mrtequila.bookworm.AddBookActivity">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="104dp"
        android:layout_height="127dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Add book"
        android:onClick="addImageDialog"
        android:src="@drawable/book"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:contentDescription="Start Date"
        android:ems="10"
        android:hint="Start Date"
        android:inputType="date"
        android:onClick="showDatePickerDialog"
        android:selectAllOnFocus="false"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/book_author"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="74dp"
        android:layout_marginTop="52dp"
        android:onClick="addBook"
        android:text="Add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagesNo" />

    <EditText
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/book_name_heading"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/finishDate"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:allowUndo="false"
        android:contentDescription="Finish date"
        android:ems="10"
        android:hint="Finish date"
        android:inputType="date"
        android:onClick="showDatePickerDialog"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintTop_toBottomOf="@+id/startDate"
        tools:inputType="none"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/pagesNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:contentDescription="Pages Number"
        android:ems="10"
        android:hint="Pages Number"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/finishDate"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
